# geofinder

./: .gitignore  CLAUDE.md  CMakeLists.txt  GeoFinder_完整技术蓝图_v5.md  README.md  _quick_build.bat  build.bat  prompt.md
.reasonix/: desktop-topic-auto-title-meta.json  desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
.reasonix/autoresearch/20260709-235750-1-stringutils-src-utils-stringutils-hpp-cpp-wstrtoutf8-u-2/logs/: heartbeat.jsonl
.reasonix/autoresearch/20260709-235750-1-stringutils-src-utils-stringutils-hpp-cpp-wstrtoutf8-u-2/state/: directions_tried.json  progress.json  task_spec.json
.reasonix/autoresearch/20260709-235750-1-stringutils-src-utils-stringutils-hpp-cpp-wstrtoutf8-u/logs/: heartbeat.jsonl
.reasonix/autoresearch/20260709-235750-1-stringutils-src-utils-stringutils-hpp-cpp-wstrtoutf8-u/state/: directions_tried.json  progress.json  task_spec.json
cmake/: Dependencies.cmake  GeoFinder.manifest
src/: main.cpp
src/app/: AppLauncher.cpp  AppLauncher.hpp  Application.cpp  Application.hpp
src/data/: AppScanner.cpp  AppScanner.hpp  ConfigManager.cpp  ConfigManager.hpp  DataTypes.hpp  FileIndex.cpp  FileIndex.hpp  IndexDatabase.cpp  IndexDatabase.hpp  LnkResolver.cpp  LnkResolver.hpp  PinyinConverter.cpp  PinyinConverter.hpp  QueryCache.cpp  QueryCache.hpp
src/render/: CommandBuffer.cpp  CommandBuffer.hpp  IRenderBackend.hpp  OpenGLBackend.cpp  OpenGLBackend.hpp  ResourceHandle.hpp
src/resource/: FontManager.cpp  FontManager.hpp  IconCache.cpp  IconCache.hpp  ResourceManager.cpp  ResourceManager.hpp
src/system/: FileWatcher.cpp  FileWatcher.hpp  HotkeyManager.cpp  HotkeyManager.hpp  IMEWrapper.cpp  IMEWrapper.hpp  TrayManager.cpp  TrayManager.hpp  WindowManager.cpp  WindowManager.hpp
src/ui/: AnimationEngine.cpp  AnimationEngine.hpp  InputField.cpp  InputField.hpp  LayoutEngine.cpp  LayoutEngine.hpp  ResultList.cpp  ResultList.hpp  SettingsPage.cpp  SettingsPage.hpp  UIManager.cpp  UIManager.hpp  Widget.hpp
src/utils/: StringUtils.cpp  StringUtils.hpp
